# Projet_12_OC_SQL

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: epicevents.py  main.py
app/cli/: click_utils.py  console.py  parser.py
app/core/: authorization.py  jwt_service.py  observability.py  security.py  session_store.py  token_store.py
app/db/: config.py  db_check_sqlalchemy.py  engine.py  init_db.py  session.py
app/models/: __init__.py  client.py  contract.py  employee.py  event.py
app/repositories/: client_repository.py  contract_repository.py  employee_repository.py  event_repository.py
app/services/: auth_service.py  client_service.py  contract_service.py  current_employee.py  employee_service.py  event_service.py
app/utils/: phone.py
docs/: architecture.md  authentication.md  cli.md  database.md  erd.mmd  observability.md  project_status.md  quality_ci.md  schema_notes.md
migrations/: env.py
migrations/versions/: 0d47bbb3cd0c_make_events_updated_at_nullable.py  228e6711b992_création_table_events.py  330d2fa9c983_add_updated_at_to_clients.py  3e15da7afb7e_création_table_employees.py  4e8330d9b3c8_add_client_first_name_last_name.py  4e9b5a9e9488_add_is_active_and_deactivated_at_to_.py  5a966059205f_création_table_contracts.py  64fa4b72d58f_création_table_clients.py  73c71b9b972e_nommage_de_la_contrainte_email_unique_.py  89da64325006_fix_contracts.py  9368e9358284_add_reactivated_at_to_employees.py  a02d68703108_drop_client_full_name.py  (+6 more)
tests/: conftest.py
(+70 files in other folders)
